--- a/contador de copos de agua/style.css
+++ b/contador de copos de agua/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: #4b6470bf;
+}
 
 .container{
     width: 100%;
@@ -13,20 +16,50 @@
 }
 
 .count{
-    margin-top: 2rem;
-    width: 20rem;
+    width: 30rem;
+    height: 10rem;
     display: flex;
+    align-items: center;
     justify-content: space-around;
 }
 .count button{
-    padding: 1.5rem;
+    background-color: #03a9f4;
+    width: 5rem;
+    height: 5rem;
     font-size: 1rem;
     border-radius: 1rem;
-    transition: 2s ease-in-out;
     cursor: pointer;
 }
+.copo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.copo p{
+    position: absolute;
+    font-size: 8rem;
+}
 
+.count p:nth-child(1){
+    color: transparent;
+    -webkit-text-stroke: 2px #03a9f4;
+}
+.count p:nth-child(2){
+    color: #03a9f4;
+    animation: ani 4s ease-in-out infinite;
+}
+
+@keyframes ani{
+    0%,100%
+    {
+        clip-path: polygon(0 44%, 15% 44%, 30% 50%, 46% 57%, 66% 59%, 83% 55%, 100% 46%, 99% 100%, 0% 100%);
+    }
+    50%
+    {
+        clip-path: polygon(0 48%, 13% 57%, 27% 61%, 43% 57%, 59% 52%, 79% 48%, 100% 46%, 99% 100%, 0% 100%);  
+    }
+}
 .result{
     margin-top: 2rem;
     display: flex;
@@ -35,4 +68,19 @@
 
 .result h1{
     display: flex;
+    
 }
+
+.txt{
+    padding: 2rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    align-items: center;
+}
+.txt li{
+    font-size: 1.3rem;
+    list-style: disc;
+}
+
