--- a/contador de copos de agua/style.css
+++ b/contador de copos de agua/style.css
@@ -5,7 +5,6 @@
 body{
     background-color: #4b6470bf;
 }
-
 .container{
     width: 100%;
     height: 100vh;
@@ -14,7 +13,6 @@ body{
     justify-content: center;
     flex-direction: column;
 }
-
 .count{
     width: 30rem;
     height: 10rem;
@@ -24,7 +22,7 @@ body{
 }
 .count button{
     background-color: #03a9f4;
-    width: 5rem;
+    width: 5.5rem;
     height: 5rem;
     font-size: 1rem;
     border-radius: 1rem;
@@ -35,12 +33,10 @@ body{
     align-items: center;
     justify-content: center;
 }
-
 .copo p{
     position: absolute;
     font-size: 8rem;
 }
-
 .count p:nth-child(1){
     color: transparent;
     -webkit-text-stroke: 2px #03a9f4;
@@ -49,7 +45,6 @@ body{
     color: #03a9f4;
     animation: ani 4s ease-in-out infinite;
 }
-
 @keyframes ani{
     0%,100%
     {
@@ -65,12 +60,9 @@ body{
     display: flex;
     flex-direction: column;
 }
-
 .result h1{
-    display: flex;
-    
+    display: flex;   
 }
-
 .txt{
     padding: 2rem;
     font-size: 1rem;
@@ -83,4 +75,57 @@ body{
     font-size: 1.3rem;
     list-style: disc;
 }
+.agua{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 3rem;
+}
+.agua input{
+    margin-top: 5vh;
+    background-color: #03a9f4;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    
+}
+.agua button{
+    color: black;
+    background-color: #03a9f4;
+    padding: 1rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    margin-top: 15px;
+}
+.agua p{
+    margin-top: 10px;
+    font-size: 3rem;
+}
+footer{
+    height: 5rem;
+    background-color: rgba(0, 255, 255, 0.238);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+footer ul{
+    display: flex;
+}
+footer li{
+    list-style: none;
+    margin: 5px;
+}
+footer a{
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
 
+footer .logo{
+    background-color: #03a9f4;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
